# chess

./: .gitignore  CMakeLists.txt  make.sh
app/: main.cpp  testBoardUI.cpp  testStockfish.cpp  testTintoretto.cpp  testUCIWrapper.cpp
inc/: boardUI.hpp  ecoreBase.hpp  engineBase.hpp  evaluationBase.hpp  move.hpp  positionBase.hpp
inc/utils/: UCIWrapper.hpp  boardUI.hpp
lib/tintoretto/: colored_string.hpp  message.hpp  mutable.hpp  progressbar.hpp  task.hpp  tintoretto.hpp
src/: boardUI.cpp  positionBase.cpp
